--- a/Javascript Basics/computerPlay/RPS.html
+++ b/Javascript Basics/computerPlay/RPS.html
@@ -1,17 +1,34 @@
 <!doctype html>
 
-<html lang="en">
+<html lang='en'>
 <head>
-  <meta charset="utf-8">
+  <meta charset='utf-8'>
 
-  <title>Rock Paper Scissor</title>
-  <meta name="description" content="Rock Paper Scissor">
-  <meta name="author" content="Lars">
+  <title>Rock Paper Scissors</title>
+  <meta name='description' content='Rock Paper Scissors'>
+  <meta name='author' content='Lars'>
 
 </head>
 
 <body>
   <h1>Rock, Paper, Scissors!</h1>
-  <script src="computerPlay.js"></script>
+  <div>Let's play a game of rock, paper, scissors!</div>
+  <div>Click any button below to start:</div>
+  <p></p>
+  <div class='buttons'>
+    <button data-button='rock' class='button'>Rock</button>
+    <button data-button='paper' class='button'>Paper</button>
+    <button data-button='scissors' class='button'>Scissors</button>
+  </div>
+  <p></p>
+  <div id="points">Points:
+    <div>
+      <span class="winPoints">Wins: 0</span>
+      <span class="losePoints">Losses: 0</span>
+      <span class="drawPoints">Draws: 0</span>
+    </div>
+  </div>
+
+  <script src='computerPlay2.js'></script>
 </body>
 </html>
