--- a/Javascript Basics/Project - Etch-a-sketch/etch-a-sketch.html
+++ b/Javascript Basics/Project - Etch-a-sketch/etch-a-sketch.html
@@ -7,17 +7,16 @@
   <title>Etch-a-sketch</title>
   <meta name="description" content="Etch-a-sketch">
   <meta name="author" content="Lars">
-
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
     <h1>Etch-a-sketch</h1>
+        <div class="wrapper">
+            <button class="reset">Click to reset</button>
+        </p>
         <div id="container">
-            <div class="content">
-                Etch-a-sketch
-            </div>
         </div>
 <script src="etch-a-sketch.js"></script>
 </body>
