--- a/Javascript Basics/Fundamentals Part 5/07 - Array Cardio Day 2/index-START.html
+++ b/Javascript Basics/Fundamentals Part 5/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,38 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isAdult = people.some( person => {
+      const currYear = new Date().getFullYear();
+      return (currYear - person.year) > 19;
+    });
+    console.log({isAdult});
+
     // Array.prototype.every() // is everyone 19 or older?
+    const everyAdult = people.every( person => {
+      const currYear = new Date().getFullYear();
+      return currYear - person.year >= 19;
+    })
+    console.log({everyAdult});
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const findComment = comments.find( comment => comment.id === 823423);
+    console.log(findComment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const delComment = comments.findIndex( comment => comment.id === 823423);
+    // delete comments[delComment];
+    // comments.splice(delComment, 1);
+    const newComments = [
+      ...comments.slice(0, delComment),
+      ...comments.slice(delComment + 1)
+    ];
+
+    // console.table(comments);
+    console.table(newComments);
 
   </script>
 </body>
