Finished the four main sections with correct color and width

--- a/Foundations/Flexbox/Project - Landing Page/index.html
+++ b/Foundations/Flexbox/Project - Landing Page/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div class="header">
-    <div class="logo"></div>
-    <div class="links">
+    <div class="logo">Header Logo</div>
+    <div class="headerlinks">
       <ul>
         <li><a href="#">header link one</a></li>
         <li><a href="#">header link two</a></li>
@@ -18,14 +18,46 @@
       </ul>
     </div>
   </div>
+  
+  <div class="body">
+    <div class="headerinfo">
+      <ul>
+        <li><a href="#">⭐ - link one</a></li>
+        <li><a href="#">🦸🏽‍♂️ - link two</a></li>
+        <li><a href="#">🖌️ - link three</a></li>
+        <li><a href="#">👌🏽 - link four</a></li>
+      </ul>
+    </div>
 
-  <div class="content">
-    <div class="information"></div>
-    <div class="information"></div>
-    <div class="information"></div>
+    <div class="information">
+      <ul>
+        <li><a href="#">⭐ - link one</a></li>
+        <li><a href="#">🦸🏽‍♂️ - link two</a></li>
+        <li><a href="#">🖌️ - link three</a></li>
+        <li><a href="#">👌🏽 - link four</a></li>
+      </ul>
+    </div>
+
+    <div class="quote">
+      <ul>
+        <li><a href="#">⭐ - link one</a></li>
+        <li><a href="#">🦸🏽‍♂️ - link two</a></li>
+        <li><a href="#">🖌️ - link three</a></li>
+        <li><a href="#">👌🏽 - link four</a></li>
+      </ul>
+    </div>
+
+    <div class="signup">
+      <ul>
+        <li><a href="#">⭐ - link one</a></li>
+        <li><a href="#">🦸🏽‍♂️ - link two</a></li>
+        <li><a href="#">🖌️ - link three</a></li>
+        <li><a href="#">👌🏽 - link four</a></li>
+      </ul>
+    </div>
+
   </div>
 
-  <div class="footer">Footer</div>
-  
+  <div class="footer">Copyright ©️ The Odin Project 2021</div>
 </body>
 </html>
