Finished headerinfo part

--- a/Foundations/Flexbox/Project - Landing Page/index.html
+++ b/Foundations/Flexbox/Project - Landing Page/index.html
@@ -21,12 +21,13 @@
   
   <div class="body">
     <div class="headerinfo">
-      <ul>
-        <li><a href="#">⭐ - link one</a></li>
-        <li><a href="#">🦸🏽‍♂️ - link two</a></li>
-        <li><a href="#">🖌️ - link three</a></li>
-        <li><a href="#">👌🏽 - link four</a></li>
-      </ul>
+      <div class="leftinfo">
+        <div class="maintext">This website is awesome</div>
+        <div class="leftinfotext">This website has some subtext that goes here under the main title. 
+          It's a smaller font and the color is lower contrast</div>
+        <button class="infobutton">Sign up</button>
+      </div>
+      <div class="rightinfo">this is a placeholder for an image</div>
     </div>
 
     <div class="information">
