finished the information section

--- a/Foundations/Flexbox/Project - Landing Page/index.html
+++ b/Foundations/Flexbox/Project - Landing Page/index.html
@@ -25,27 +25,40 @@
         <div class="maintext">This website is awesome</div>
         <div class="leftinfotext">This website has some subtext that goes here under the main title. 
           It's a smaller font and the color is lower contrast</div>
-        <button class="infobutton">Sign up</button>
+        <button class="headerbutton">Sign up</button>
       </div>
       <div class="rightinfo">this is a placeholder for an image</div>
     </div>
 
     <div class="information">
-      <ul>
-        <li><a href="#">⭐ - link one</a></li>
-        <li><a href="#">🦸🏽‍♂️ - link two</a></li>
-        <li><a href="#">🖌️ - link three</a></li>
-        <li><a href="#">👌🏽 - link four</a></li>
-      </ul>
+      <div class="informationtext">Some random information.</div>
+      <div class="boxes">
+        <div>
+          <div class="box"></div>
+          <div class="boxtext">this is some subtext under an illustration or image</div>
+        </div>
+
+        <div>
+          <div class="box"></div>
+          <div class="boxtext">this is some subtext under an illustration or image</div>
+        </div>
+
+        <div>
+          <div class="box"></div>
+          <div class="boxtext">this is some subtext under an illustration or image</div>
+        </div>
+
+        <div>
+          <div class="box"></div>
+          <div class="boxtext">this is some subtext under an illustration or image</div>
+        </div>
+
+      </div>
     </div>
 
     <div class="quote">
-      <ul>
-        <li><a href="#">⭐ - link one</a></li>
-        <li><a href="#">🦸🏽‍♂️ - link two</a></li>
-        <li><a href="#">🖌️ - link three</a></li>
-        <li><a href="#">👌🏽 - link four</a></li>
-      </ul>
+      <div class="quotetext">
+      </div>
     </div>
 
     <div class="signup">
@@ -59,6 +72,6 @@
 
   </div>
 
-  <div class="footer">Copyright ©️ The Odin Project 2021</div>
+  <div class="footer">Copyright ©️ The Odin Project 2023</div>
 </body>
 </html>
