--- a/Foundations/Flexbox/Project - Landing Page/index.html
+++ b/Foundations/Flexbox/Project - Landing Page/index.html
@@ -58,6 +58,11 @@
 
     <div class="quote">
       <div class="quotetext">
+        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up 
+        space, or maybe peope will actually read it. Who knows? All I know is that it looks nice.
+      </div>
+      <div class="quoteauthor">
+        -Thor, God of Thunder
       </div>
     </div>
 
