--- a/Foundations/Flexbox/Project - Landing Page/index.html
+++ b/Foundations/Flexbox/Project - Landing Page/index.html
@@ -67,12 +67,13 @@
     </div>
 
     <div class="signup">
-      <ul>
-        <li><a href="#">⭐ - link one</a></li>
-        <li><a href="#">🦸🏽‍♂️ - link two</a></li>
-        <li><a href="#">🖌️ - link three</a></li>
-        <li><a href="#">👌🏽 - link four</a></li>
-      </ul>
+      <div class="signupbox">
+        <div>
+          <div class="signupboxtitle">Call to action! It's time!</div>
+          <div class="signupboxtext">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button class="signupbutton">Sign up</button>
+      </div>
     </div>
 
   </div>
