Did some cleaning, removed much of the css and html

--- a/Advanced HTML and CSS/Project - Personal Portfolio/index.html
+++ b/Advanced HTML and CSS/Project - Personal Portfolio/index.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Personal Portfolio</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">       
+  <title>Personal Portfolio</title>
 </head>
 <body>
 
-    <div class="container">
+  <div class="header">Header</div>
 
-        <div class="header">Header</div>
-        <div class="content">Content</div>
-        
+  <div class="container">
+    <div class="content">
+
+      <div class="project">Project 1</div>
+      <div class="project">Project 2</div>
+      <div class="project">Project 3</div>
+      <div class="project">Project 4</div>
+      <div class="project">Project 5</div>
+
     </div>
-    <div class="footer">Footer</div>
+  </div>
+
+  <div class="footer">
+
+    <div class="footerleft">
+      This is a part of The Odin Project.
+      If you have any questions, please contact me at <a href="mailto: lars.forse@gmail.com">my email</a>.
+      I am also at the platforms <i class="devicon-github-original"></i><a href="https://www.github.com/larsfor" target="_self">Github</a> 
+      and <i class="devicon-linkedin-plain"></i><a href="https://www.linkedin.com/in/larsfors/" target="_self">LinkedIn</a>
+      Feel free to look at my projects, but please bear in mind that it might be a little rough around the edges.
+    </div>
+
+    <div class="footerright">
+      right footer with a picture
+    </div>
+
+  </div>
     
 </body>
 </html>
