Some more css fixing

--- a/Advanced HTML and CSS/Project - Personal Portfolio/index.html
+++ b/Advanced HTML and CSS/Project - Personal Portfolio/index.html
@@ -15,11 +15,36 @@
   <div class="container">
     <div class="content">
 
-      <div class="project">Project 1</div>
-      <div class="project">Project 2</div>
-      <div class="project">Project 3</div>
-      <div class="project">Project 4</div>
-      <div class="project">Project 5</div>
+      <div class="project">
+        <div class="projectbox">Project 1</div>
+        <div class="projecttext">Look at me!</div>
+      </div>
+
+      <div class="project">
+        <div class="projectbox">Project 2</div>
+        <div class="projecttext">Look at me!</div>
+      </div>
+
+      <div class="project">
+        <div class="projectbox">Project 3</div>
+        <div class="projecttext">Look at me!</div>
+      </div>
+
+      <div class="project">
+        <div class="projectbox">Project 4</div>
+        <div class="projecttext">Look at me!</div>
+      </div>
+
+      <div class="project">
+        <div class="projectbox">Project 5</div>
+        <div class="projecttext">Look at me!</div>
+      </div>
+
+      <div class="project">
+        <div class="projectbox">Project 6</div>
+        <div class="projecttext">Look at me!</div>
+      </div>
+
 
     </div>
   </div>
@@ -27,11 +52,18 @@
   <div class="footer">
 
     <div class="footerleft">
-      This is a part of The Odin Project.
-      If you have any questions, please contact me at <a href="mailto: lars.forse@gmail.com">my email</a>.
+      <div class="footertext">
+        This is a part of <a href="https://www.theodinproject.com/">The Odin Project</a>.
+      </div>
+      <div class="footertext">
+        Feel free to look at my projects, but please bear in mind that it might be a little rough around the edges.
+      </div>
+      <div class="footertext">
+        If you have any questions, please contact me at <a href="mailto: lars.forse@gmail.com">my email</a>.
       I am also at the platforms <i class="devicon-github-original"></i><a href="https://www.github.com/larsfor" target="_self">Github</a> 
       and <i class="devicon-linkedin-plain"></i><a href="https://www.linkedin.com/in/larsfors/" target="_self">LinkedIn</a>
-      Feel free to look at my projects, but please bear in mind that it might be a little rough around the edges.
+
+      </div>
     </div>
 
     <div class="footerright">
