Experimenting with responsive images and media queries

--- a/Advanced HTML and CSS/Project - Personal Portfolio/index.html
+++ b/Advanced HTML and CSS/Project - Personal Portfolio/index.html
@@ -10,7 +10,27 @@
 </head>
 <body>
 
-  <div class="header">Header</div>
+  <div class="header">
+    
+    <div class="headerimage">
+      <img 
+      srcset=
+        "./images/pexels-andrea-piacquadio-840996-small.jpg 320w, 
+        ./images/pexels-andrea-piacquadio-840996.jpg 770w"
+      src="../Project - Personal Portfolio/images/pexels-andrea-piacquadio-840996.jpg" alt="a person working behind the desk smiling">
+    </div>
+
+    <div class="headercard">
+      <div class="card">
+        <h1>About me</h1>
+        <p>I am an accountant trying to become better at programming.
+          I am interested in exercising, technology and business. 
+          In addition to trying to advance my technological skills, I am also quite fond of personal finance.
+          Some day I will have a website dedicated to teach personal finance.
+        </p>
+      </div>
+    </div>
+  </div>
 
   <div class="container">
     <div class="content">
@@ -51,24 +71,20 @@
 
   <div class="footer">
 
-    <div class="footerleft">
+
       <div class="footertext">
         This is a part of <a href="https://www.theodinproject.com/">The Odin Project</a>.
       </div>
+
       <div class="footertext">
         Feel free to look at my projects, but please bear in mind that it might be a little rough around the edges.
       </div>
+
       <div class="footertext">
         If you have any questions, please contact me at <a href="mailto: lars.forse@gmail.com">my email</a>.
       I am also at the platforms <i class="devicon-github-original"></i><a href="https://www.github.com/larsfor" target="_self">Github</a> 
       and <i class="devicon-linkedin-plain"></i><a href="https://www.linkedin.com/in/larsfors/" target="_self">LinkedIn</a>
-
       </div>
-    </div>
-
-    <div class="footerright">
-      right footer with a picture
-    </div>
 
   </div>
     
