Small css changes

--- a/Advanced HTML and CSS/Project - Personal Portfolio/index.html
+++ b/Advanced HTML and CSS/Project - Personal Portfolio/index.html
@@ -14,10 +14,14 @@
     
     <div class="headerimage">
       <img 
-      srcset=
-        "./images/pexels-andrea-piacquadio-840996-small.jpg 320w, 
-        ./images/pexels-andrea-piacquadio-840996.jpg 770w"
-      src="../Project - Personal Portfolio/images/pexels-andrea-piacquadio-840996.jpg" alt="a person working behind the desk smiling">
+      srcset= "
+      ./images/pexels-andrea-piacquadio-840996-small.jpg 320w, 
+      ./images/pexels-andrea-piacquadio-840996.jpg 640w
+      "
+      sizes="70vmin" 
+      src="../Project - Personal Portfolio/images/pexels-andrea-piacquadio-840996.jpg" 
+      alt="a person working behind the desk smiling">
+      <div class="picturecopyright"> <a href="https://www.pexels.com/nb-no/@olly/">picture from Pexels by Andrea Piacquadio</a> </div> 
     </div>
 
     <div class="headercard">
@@ -30,6 +34,7 @@
         </p>
       </div>
     </div>
+    <a class="picturecopyright" href="http://www.freepik.com">Background image designed by starline / Freepik</a>
   </div>
 
   <div class="container">
@@ -83,8 +88,8 @@
       <div class="footertext">
         If you have any questions, please contact me at <a href="mailto: lars.forse@gmail.com">my email</a>.
       I am also at the platforms <i class="devicon-github-original"></i><a href="https://www.github.com/larsfor" target="_self">Github</a> 
-      and <i class="devicon-linkedin-plain"></i><a href="https://www.linkedin.com/in/larsfors/" target="_self">LinkedIn</a>
-      </div>
+      and <i class="devicon-linkedin-plain"></i> <a href="https://www.linkedin.com/in/larsfors/" target="_self">LinkedIn</a>
+    </div>
 
   </div>
     
