--- a/Advanced HTML and CSS/Project - Personal Portfolio/index.html
+++ b/Advanced HTML and CSS/Project - Personal Portfolio/index.html
@@ -54,7 +54,7 @@
         <div class="project">
           <a href="https://github.com/larsfor/The_Odin_Project/tree/main/Ruby%20on%20Rails/Project%20-%20Flight%20Booker/odin-flight-booker">
             <div class="projectbox">
-              <img src="../Project - Personal Portfolio/images/projects/flight1.png" alt="chess game being played in VSCode terminal">
+              <img src="../Project - Personal Portfolio/images/projects/flight1.png" alt="a flight booker made in Ruby on Rails">
             </div>
           </a>
           <div class="projecttext">Look at me!</div>
@@ -63,7 +63,7 @@
         <div class="project">
           <a href="https://github.com/larsfor/The_Odin_Project/tree/main/Ruby%20on%20Rails/Project%20-%20Building%20Facebook/odin-facebook">
             <div class="projectbox">
-              <img src="../Project - Personal Portfolio/images/projects/facebook1.png" alt="chess game being played in VSCode terminal">
+              <img src="../Project - Personal Portfolio/images/projects/facebook1.png" alt="a copy of facebook made in Ruby on Rails">
             </div>
           </a>
           <div class="projecttext">Look at me!</div>
@@ -72,7 +72,7 @@
         <div class="project">
           <a href="https://github.com/larsfor/The_Odin_Project/tree/main/Foundations/Javascript%20Basics/Project%20-%20Calculator">
             <div class="projectbox">
-              <img src="../Project - Personal Portfolio/images/projects/calculator.png" alt="chess game being played in VSCode terminal">
+              <img src="../Project - Personal Portfolio/images/projects/calculator.png" alt="a rudimentary calculator made in JavaScript">
             </div>
           </a>
           <div class="projecttext">Look at me!</div>
@@ -81,7 +81,7 @@
         <div class="project">
           <a href="https://github.com/larsfor/The_Odin_Project/tree/main/Foundations/Javascript%20Basics/Project%20-%20Etch-a-sketch">
             <div class="projectbox">
-              <img src="../Project - Personal Portfolio/images/projects/etch-a-sketch.png" alt="chess game being played in VSCode terminal">
+              <img src="../Project - Personal Portfolio/images/projects/etch-a-sketch.png" alt="an etch-a-sketch made in JavaScript">
             </div>
           </a>
           <div class="projecttext">Look at me!</div>
@@ -90,7 +90,7 @@
         <div class="project">
           <a href="https://github.com/larsfor/The_Odin_Project/tree/main/Foundations/Javascript%20Basics/Project%20-%20Rock%2C%20paper%2C%20scissors">
             <div class="projectbox">
-              <img src="../Project - Personal Portfolio/images/projects/rock-paper-scissors.png" alt="chess game being played in VSCode terminal">
+              <img src="../Project - Personal Portfolio/images/projects/rock-paper-scissors.png" alt="a rock-paper-scissors game made in JavaScript">
             </div>
           </a>
           <div class="projecttext">Look at me!</div>
