added some functionality to show table with js

--- a/JavaScript/Project - Tic Tac Toe/index.html
+++ b/JavaScript/Project - Tic Tac Toe/index.html
@@ -9,21 +9,22 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
-    <table>
+
+    <table id="ttt-table">
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td id="0-0"></td>
+            <td id="0-1"></td>
+            <td id="0-2"></td>
         </tr>        
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td id="1-0"></td>
+            <td id="1-1"></td>
+            <td id="1-2"></td>
         </tr>        
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td id="2-0"></td>
+            <td id="2-1"></td>
+            <td id="2-2"></td>
         </tr>
     </table>
 
