Managed to get a working logic for switching players

--- a/JavaScript/Project - Tic Tac Toe/index.html
+++ b/JavaScript/Project - Tic Tac Toe/index.html
@@ -11,23 +11,23 @@
     <h1>Tic Tac Toe</h1>
     <table>
         <tr>
-            <td id="0-0">X</td>
-            <td id="0-1">O</td>
-            <td id="0-2">O</td>
+            <td id="0-0"></td>
+            <td id="0-1"></td>
+            <td id="0-2"></td>
         </tr>        
         <tr>
-            <td id="1-0">O</td>
-            <td id="1-1">X</td>
-            <td id="1-2">O</td>
+            <td id="1-0"></td>
+            <td id="1-1"></td>
+            <td id="1-2"></td>
         </tr>        
         <tr>
-            <td id="2-0">O</td>
-            <td id="2-1">O</td>
-            <td id="2-2">X</td>
+            <td id="2-0"></td>
+            <td id="2-1"></td>
+            <td id="2-2"></td>
         </tr>
     </table>
 
-    <div id="playerprompt">Player 1's turn</div>
+    <div id="playerprompt"></div>
 
     <script src="script.js"></script>
     
