--- a/JavaScript/Project - Tic Tac Toe/index.html
+++ b/JavaScript/Project - Tic Tac Toe/index.html
@@ -27,6 +27,11 @@
         </tr>
     </table>
 
+    <div class="centered_button">
+        <button id="startButton">Start new game</button>
+    </div>
+    
+
     <div id="playerprompt"></div>
 
     <script src="script.js"></script>
