--- a/JavaScript/Project - Tic Tac Toe/index.html
+++ b/JavaScript/Project - Tic Tac Toe/index.html
@@ -27,8 +27,9 @@
         </tr>
     </table>
 
-    <div class="centered_button">
+    <div style="text-align: center;" class="centered_button">
         <button id="startButton">Start new game</button>
+        <button id="refreshButton">Start new game</button>
     </div>
     
 
