--- a/JavaScript/Project - Tic Tac Toe/index.html
+++ b/JavaScript/Project - Tic Tac Toe/index.html
@@ -27,7 +27,14 @@
         </tr>
     </table>
 
-    <div style="text-align: center;" class="centered_button">
+    <div class="player_names">
+        <label for="fname">Player 1's name (X):</label>
+        <input type="text" id="playerone" name="playerone" required><br><br>
+        <label for="lname">Player 2's name (O):</label>
+        <input type="text" id="playertwo" name="playertwo" required><br><br>
+    </div>
+
+    <div class="centered_button">
         <button id="startButton">Start new game</button>
         <button id="refreshButton">Start new game</button>
     </div>
