added zip code validation

--- a/JavaScript/Form Validation with JavaScript/Practice - Project/index.html
+++ b/JavaScript/Form Validation with JavaScript/Practice - Project/index.html
@@ -36,9 +36,9 @@
         </p>
 
         <p>
-            <label for="zip-code">
+            <label for="zipcode">
                 <span>Zip Code</span>
-                <input type="text" name="zipcode" id="zipcode">
+                <input type="text" name="zipcode" id="zipcode" required minlength="4">
                 <span class="zipcodeError" aria-live="polite"></span>
             </label>
         </p>
