--- a/JavaScript/Project - Weather App/index.html
+++ b/JavaScript/Project - Weather App/index.html
@@ -3,41 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <title>Weather App</title>
 </head>
 <body>
 
     <h1>This is my Weather App!</h1>
+    <h4>Search for a location to start</h4>
     <form id="weatherForm">
         <div class="mb-3">
-          <label for="location" class="form-label">Location</label>
           <input type="text" class="form-control" id="location" aria-describedby="location" placeholder="Enter a location to search for">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+      <hr>
     <p>
-        <label for="location">Location:</label>
+        <label for="location"> <strong>Location:</strong></label>
         <span id="weatherLocation"></span>
     </p>
     <p>
-        <label for="region">Region:</label>
+        <label for="region"><strong>Region:</strong></label>
         <span id="weatherRegion"></span>
     </p>
     <p>
-        <label for="country">Country:</label>
+        <label for="country"><strong>Country:</strong></label>
         <span id="weatherCountry"></span>
     </p>
     <p>
-        <label for="temperature">Temperature:</label>
-        <span id="weatherTemp">C° / F°</span>
+        <label for="temperature"><strong>Temperature:</strong></label>
+        <span id="weatherTempC" class="active">C°</span>
+        <span id="weatherTempF" class="inactive">F°</span>
+        <div>
+            <select name="changeCF" id="changeCF">
+                <option value="Celsius">Celsius</option>
+                <option value="Fahrenheit">Fahrenheit</option>
+            </select>
+        </div>
+    </p>
+    <p>
+        <label for="weatherText"><strong>Description:</strong></label>
+        <span id="weatherText"></span>
     </p>
     <p>
         <img src="#" alt="image of the weather" id="weatherImage">
     </p>
     <p>
-        <label for="wind">Wind strength:</label>
-        <span id="weatherWind">km/h / mp/h</span>
+        <label for="wind"><strong>Wind strength:</strong></label>
+        <span id="weatherWindKph" class="active">km/h</span>
+        <span id="weatherWindMph" class="inactive">mp/h</span>
+        <div>
+            <select name="changeKM" id="changeKM">
+                <option value="km/h">km/h</option>
+                <option value="mp/h">mp/h</option>
+            </select>
+        </div>
     </p>
 
     Powered by <a href="https://www.weatherapi.com/" title="Free Weather API">WeatherAPI.com</a>
